Add a deployment stage to the pipeline3

--- a/Tailspin.SpaceGame.Web/wwwroot/css/site.scss
+++ b/Tailspin.SpaceGame.Web/wwwroot/css/site.scss
@@ -22,7 +22,7 @@ section {
 
 .intro {
     height: 350px;
-    background-color: #666;
+    background-color: #600;
     background-image: url('/images/space-background.svg');
     background-size: 1440px;
     background-position: center top;
@@ -35,7 +35,7 @@ section {
     }
 
     p {
-        color: white;
+        color: green;
         font-weight: 600;
         font-size: 1.6rem;
         text-shadow: 0 0 2px black;
