Add a deployment stage to the pipeline3

--- a/Tailspin.SpaceGame.Web/wwwroot/css/site.scss
+++ b/Tailspin.SpaceGame.Web/wwwroot/css/site.scss
@@ -22,7 +22,7 @@ section {
 
 .intro {
     height: 350px;
-    background-color: #609;
+    background-color: #06c;
     background-image: url('/images/space-background.svg');
     background-size: 1440px;
     background-position: center top;
